--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
-  app:
+  laravel:
     build: .
+    restart: unless-stopped
     container_name: laravel
     volumes:
       - ./:/app
@@ -8,7 +9,7 @@ services:
     networks:
       - laravel-network
 
-  nginx:
+  webserver:
     image: nginx:latest
     container_name: nginx
     ports:
@@ -17,7 +18,7 @@ services:
       - ./:/app
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - app
+      - laravel
     networks:
       - laravel-network
 
@@ -33,9 +34,24 @@ services:
       - mariadb_data:/var/lib/mysql
     networks:
       - laravel-network
+  vite:
+    build:
+      context: .
+      dockerfile: Dockerfile.vite # Dockerfile for Vite
+    volumes:
+      - ./:/app
+      - vite_node_modules:/app/node_modules
+    ports:
+      - "5173:5173" # Expose Vite’s port (optional for direct access)
+    command: npm run dev -- --host 0.0.0.0
+    depends_on:
+      - laravel
+    environment:
+      - VITE_HOST=0.0.0.0
 
 volumes:
   mariadb_data:
+  vite_node_modules:
 
 
 networks:
