--- a/nginx.conf
+++ b/nginx.conf
@@ -23,8 +23,18 @@ server {
     # Handles all requests, routing them to Laravel's front controller (index.php)
     location / {
         # Tries to serve the requested file or directory; falls back to index.php for Laravel routing
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /@vite;
     }
+
+       # Proxy to Vite development server (running locally) for assets
+    location @vite {
+        proxy_pass http://host.docker.internal:5173;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
 
     # Disables logging for favicon.ico to reduce log clutter
     location = /favicon.ico {
