--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,13 @@ services:
   mariadb:
     image: mariadb:latest
     container_name: mariadb
+    env_file:
+      - .env
     environment:
-      - MYSQL_ROOT_PASSWORD=secret
-      - MYSQL_DATABASE=bitnami_myapp
-      - MYSQL_USER=bn_myapp
-      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
